--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>Labels in front of form fields (Attardi.org)</title>
+    <title>Labels behind form fields (Attardi.org)</title>
 
     <meta name="author" content="Stefano J. Attardi" />
 
@@ -17,22 +17,26 @@
       .page { clear: both; overflow: hidden; }
       .loading { background: white url(loader.gif) no-repeat center center; min-height: 20px; }
 
-      a { text-decoration: none; color: #f33; }
+      a { text-decoration: none; color: #c36; }
 
       h1 a { color: #999; }
-      h1 a:hover { color: #f33; }
+      h1 a:hover { color: #c36; }
       .pale { color: #ccc; }
 
       /* tabs */
       .tabs, .tabs li { margin: 0; padding: 0; display: block; }
       .tabs li a { padding: 5px 20px; margin: 0 2px 0 0; float: left; background: #ccc; text-align: center; }
-      .tabs li a:hover { background: #f33; color: #fff; }
+      .tabs li a:hover { background: #c36; color: #fff; }
       .tabs li.active a, .page { background: #eee; cursor: default; }
-      .tabs li.active a:hover { color: #f33; }
+      .tabs li.active a:hover { color: #c36; }
       .page { padding: 1em 2em; }
 
       /* borders */
       input, textarea, select { border: 1px solid #bbb; border-top-color: #777; border-bottom-color: #ddd; }
+      .input {
+      position: relative;
+      top: -5px;
+      }
 
     </style>
     <link rel="stylesheet" type="text/css" media="screen,projection" href="labels.css" />
@@ -44,7 +48,7 @@
 
     <h2><a href="/">attardi.org</a></h2>
 
-    <h1>Labels <span class="pale">[</span> <a href="../labels/">behind</a> <span class="pale">|</span> in front of <span class="pale">]</span> form fields</h1>
+    <h1>Labels <span class="pale">[</span> behind <span class="pale">|</span> <a href="../labels2/">in front of</a> <span class="pale">]</span> form fields</h1>
 
     <ul class="tabs">
       <li><a href="#info">Info</a></li>
@@ -63,7 +67,7 @@
       <input type="text" id="email0" />
     </div>
 
-    <p>This version works by placing the label <strong>in front of the input field</strong>, so that the native styling of the control can be preserved. If you prefer, the previous version places labels <a href="../labels/">behind the input field</a>.</p>
+    <p style="clear:both">This version works by placing the label <strong>behind the input field</strong> and making the input field transparent, so that the label will not intercept clicks. If you prefer to preserve the native styling of the controls, the new version places labels <a href="../labels2/">in front of the input field</a>.</p>
 
     <p>The solution is based on simple HTML markup, some CSS styling, and a jQuery plugin. The license is <a href="#javascript">MIT</a>. Feedback (bugs, suggestions, compatibility reports) on Twitter: @<a href="http://twitter.com/steadicat">steadicat</a>.</p>
 
