Fixed unclosed tag

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <p>Thanks!</p>
 
-    <h3>Rationale</h3
+    <h3>Rationale</h3>
 
     <p>Placing labels inside input fields is a new pattern that, in my user tests, <em>yields better results</em>. This pattern is used consistently, for example, in Facebook and throughout Apple’s products.</p>
 
