Fixed link to other version

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <h2><a href="/">attardi.org</a></h2>
 
-    <h1>Labels <span class="pale">[</span> <a href="../labels/">behind</a> <span class="pale">|</span> in front of <span class="pale">]</span> form fields</h1>
+    <h1>Labels <span class="pale">[</span> <a href="http://attardi.org/labels/">behind</a> <span class="pale">|</span> in front of <span class="pale">]</span> form fields</h1>
 
     <ul class="tabs">
       <li><a href="#info">Info</a></li>
