--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <body>
 
-    <h2><a href="/">attardi.org</a></h2>
+    <h2><a href="http://attardi.org/">attardi.org</a></h2>
 
     <h1>Labels <span class="pale">[</span> behind <span class="pale">|</span> <a href="http://attardi.org/labels2/">in front of</a> <span class="pale">]</span> form fields</h1>
 
