--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <body>
 
-    <h2><a href="/">attardi.org</a></h2>
+    <h2><a href="http://attardi.org/">attardi.org</a></h2>
 
     <h1>Labels <span class="pale">[</span> <a href="http://attardi.org/labels/">behind</a> <span class="pale">|</span> in front of <span class="pale">]</span> form fields</h1>
 
@@ -63,7 +63,7 @@
       <input type="text" />
     </label>
 
-    <p>This version works by placing the label <strong>in front of the input field</strong>, so that the native styling of the control can be preserved. If you prefer, the previous version places labels <a href="../labels/">behind the input field</a>.</p>
+    <p>This version works by placing the label <strong>in front of the input field</strong>, so that the native styling of the control can be preserved. If you prefer, the previous version places labels <a href="http://attardi.org/labels/">behind the input field</a>.</p>
 
     <p>The solution is based on simple HTML markup, some CSS styling, and a jQuery plugin. The license is <a href="#javascript">MIT</a>. Feedback (bugs, suggestions, compatibility reports) on Twitter: @<a href="http://twitter.com/steadicat">steadicat</a>.</p>
 
