--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 
     <p>The solution is based on simple HTML markup, some CSS styling, and a jQuery plugin. The license is <a href="#javascript">MIT</a>. Feedback (bugs, suggestions, compatibility reports) on Twitter: @<a href="http://twitter.com/steadicat">steadicat</a>.</p>
 
+    <p>The code is also <a href="http://github.com/steadicat/labels/tree/master">on Github</a>.</p>
+
     <p>Thanks!</p>
 
     <h3>Rationale</h3>
