Bring design into this decade and improve CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta name="author" content="Stefano J. Attardi" />
 
+    <link href="http://fonts.googleapis.com/css?family=Lato:100,400,700|Playfair+Display:400italic|Source+Code+Pro" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" media="screen,projection" href="labels.css" />
     <link rel="stylesheet" type="text/css" media="screen,projection" href="site/site.css" />
     <link rel="stylesheet" type="text/css" media="screen,projection" href="site/sh/shjs.css" />
@@ -18,14 +19,6 @@
     <h2><a href="http://attardi.org/">attardi.org</a></h2>
 
     <h1>Labels inside form fields</h1>
-
-    <ul class="tabs">
-      <li><a href="#info">Info</a></li>
-      <li><a href="#demo">Demo</a></li>
-      <li><a href="#html">HTML</a></li>
-      <li><a href="#css">CSS</a></li>
-      <li><a href="#javascript">Javascript</a></li>
-    </ul>
 
     <div class="page" id="info">
 
@@ -43,6 +36,7 @@
     </div>
 
     <div class="page" id="demo">
+      <h3>Demo</h3>
 
     <label class="input">
       <span>Email address</span>
@@ -87,20 +81,23 @@
 
     </div>
 
-    <pre class="sh_html loading page" id="html">
+    <h3>Markup</h3>
+    <pre class="sh_html code" id="html">
 &lt;label class="input"&gt;
-    &lt;span&gt;Email address&lt;/span&gt;
-    &lt;input type="text" /&gt;
+  &lt;span&gt;Email address&lt;/span&gt;
+  &lt;input type="text" /&gt;
 &lt;/label&gt;</pre>
-    <pre class="sh_css loading page" id="css"></pre>
-    <pre class="sh_javascript loading page" id="javascript"></pre>
+
+    <h3>CSS</h3>
+    <pre class="sh_css loading code" id="css"></pre>
+    <h3>JavaScript</h3>
+    <pre class="sh_javascript loading code" id="javascript"></pre>
 
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="site/sh/shjs.js"></script>
     <script type="text/javascript" src="site/sh/css.js"></script>
     <script type="text/javascript" src="site/sh/html.js"></script>
     <script type="text/javascript" src="site/sh/javascript.js"></script>
-    <script type="text/javascript" src="site/tabs.js"></script>
     <script type="text/javascript" src="site/site.js"></script>
 
     <script type="text/javascript" src="labels.js"></script>
